k8s/infra/mssql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-ordering
  namespace: cloudcart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-ordering
  template:
    metadata:
      labels:
        app: mssql-ordering
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-ordering
  namespace: cloudcart
spec:
  selector:
    app: mssql-ordering
  ports:
    - port: 1433
      targetPort: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-inventory
  namespace: cloudcart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-inventory
  template:
    metadata:
      labels:
        app: mssql-inventory
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-inventory
  namespace: cloudcart
spec:
  selector:
    app: mssql-inventory
  ports:
    - port: 1433
      targetPort: 1433
